<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_sid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="SID"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_dr_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Dr Name"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_medicine_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Medicine Name"
                    android:inputType="text"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Dosage :"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="Use for :"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@+id/spinner_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:entries="@array/Days"
                    android:prompt="@string/Days_choose" />

                <TextView
                    android:id="@+id/textViewDaysError"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="Tablet" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Spoon" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Else" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_box_morning"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:text="@string/Morning_CB" />

                <EditText
                    android:id="@+id/edit_text_morning_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"
                    android:enabled="false"
                    android:hint="Quantity"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/edit_text_morning_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:enabled="false"
                    android:hint="Time"
                    android:inputType="time"
                    android:maxLines="1" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_box_afternoon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:text="@string/AN_CB" />

                <EditText
                    android:id="@+id/edit_text_quantity_afternoon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"
                    android:enabled="false"
                    android:hint="Quantity"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/edit_text_afternoon_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:enabled="false"
                    android:hint="Time"
                    android:inputType="time"
                    android:maxLines="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_box_night"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:text="@string/Night_CB" />

                <EditText
                    android:id="@+id/edit_text_night_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".30"
                    android:enabled="false"
                    android:hint="Quantity"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/edit_text_night_time"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".40"
                    android:enabled="false"
                    android:hint="Time"
                    android:inputType="time"
                    android:maxLines="1" />
            </LinearLayout>

            <TextView
                android:id="@+id/CommentBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/commentBox"
                android:textAlignment="center"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edit_text_comments"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/white"
                android:gravity="start"
                android:inputType="text|textMultiLine"
                android:maxLines="5"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center|top">


        <ImageView
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@mipmap/save_s1" />

        <ImageView
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:clickable="true"
            android:src="@mipmap/cancel_s" />

    </LinearLayout>


</LinearLayout>